package baitap.cb1;

public abstract class ChuoiMenhGiaFactory extends ATM{
    public ChuoiMenhGiaFactory(int menhGia) {
        super(menhGia);
    }

    @Override
    public void rutTien(int soTien) {

    }
}
